# bookshelf

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml  input.css  package-lock.json  package.json
assets/: manifest.json  sw.js
scripts/: build.sh  deploy.sh  screenshot.sh
src/: cache.rs  main.rs  route.rs  util.rs
src/api/: books.rs  leaderboard.rs  mod.rs  notifications.rs  settings.rs
src/components/: error_banner.rs  icons.rs  layout.rs  mod.rs  notification_bell.rs  progress_bar.rs  swipe_item.rs  sync_indicator.rs  tab_bar.rs  undo_toast.rs
src/models/: book.rs  change.rs  leaderboard.rs  mod.rs  snapshot.rs
src/pages/: activity.rs  book_detail.rs  books.rs  leaderboard.rs  mod.rs  settings.rs
src/server/: auth.rs  changelog.rs  db.rs  mod.rs  notify.rs  snapshots.rs  validate.rs
